Change History
**************

1.3.1 (xxxx-xx-xx)
==================

 - Refactored the ``is_build_dir()`` helper method to make it easier to test
   and override in customized recipes. [dokai]

 - Fixed the handling of the working directory so that it is restored to the
   state before executing the recipe regardless whether the recipe was
   successful or not. Thanks to Jonathan Ballet for the report and preliminary
   patch. [dokai]

1.3.0 (2009-09-20)
==================

  - Added new options ``environment-section`` and ``environment`` to control
    environment variables before executing the recipe.

  - Added a new option, ``prefix``, to override the installation prefix.
    Defaults to the previously hardcoded value of the part location.

1.2.0
=====

  - Added new ``configure-command`` option to control the command used to
    generate the ``Makefile``. This makes it possible to build slightly
    different packages, e.g. Perl projects where Makefile.PL replaces the
    configure script.

1.1.1
=====

  - Don't try to execute hooks if the option is an empty string. This
    will make it possible to disable hooks when extending existing
    parts.

1.1.0
=====

 - Added new option ``path`` to allow building and installing local
   source trees. The ``path`` option is mutually exclusive with
   ``url``.

1.0.1
=====

 - Fixed a bug with 'keep-compile-dir' option. The location of the
   compilation directory was not available through the
   ``options['compile-directory']`` option as documented.

1.0.0
=====

 - Initial public release.